# llm-bdi-pipeline

./: .env.example  .gitignore  AGENTS.md  CITATION.cff  DATA_LICENSE.md  README.md  REPRODUCING.md  THIRD_PARTY_NOTICES.md  TO-DO-LIST.md  pyproject.toml
docs/: aaai_paper_narrative_outline.md  full_test_jason_validation_scope.md  gp_backend_routing_taxonomy.md  gp_backend_strategy.md  input_design.md  paper_revision_plan.md  research_pipeline_decisions.md
paper_artifacts/: domain_support_taxonomy.json  final_paper_manifest.json
scripts/: build_reproducibility_release.py  build_temporal_goal_benchmark.py  build_temporal_nl_manifests.py  build_temporal_translation_worklist.py  compare_domain_level_experiments.py  freeze_cross_seed_temporal_results.py  freeze_external_reference_results.py  freeze_five_seed_full_compiler_results.py  freeze_paired_ablation_results.py  freeze_raw_moose_extension_results.py  generate_aaai_comparison_tables.py  generate_aaai_figures.py  generate_aaai_method_figures.py  generate_aaai_result_tables.py  generate_blocksworld_satisfiable_split.py  generate_domain_instance_split.py  generate_domain_level_baselines.py  generate_evaluation_tables.py  generate_ltlf_dataset.py  gp_backend_audit.py  materialize_achievement_benchmarks.py  merge_direct_temporal_domain_results.py  merge_external_reference_retries.py  public_result_schema.py  repair_paired_ablation_results.py  resource_guard.py  run_blocks_train_experiment.py  run_blocksworld_first20_experiment.py  run_blocksworld_qbw_train_experiment.py  run_certificate_challenge_matrix.py  run_controller_structure_smoke_ablation.py  run_direct_temporal_reference.py  run_domain_level_experiment.py  run_domain_level_experiment_matrix.py  run_external_planning_references.py  run_external_reference_infrastructure_repairs.sh  run_final_paper_data.py  run_full_test_jason_validation.py  run_full_test_jason_validation.sh  run_isolated_fond4ltlf.py  (+17 more)
src/: main.py
tests/: README.md  run_direct_plan_generation_api_sweep.py  test_aaai_manuscript_layout.py  test_build_reproducibility_release.py  test_certificate_challenge_matrix.py  test_direct_temporal_reference_script.py  test_external_planning_references_script.py  test_external_reference_repair_script.py  test_freeze_cross_seed_temporal_results.py  test_freeze_external_reference_results.py  (+26 more)
(+2778 files in other folders)
