[project]
name = "llm-bdi-pipeline"
version = "0.1.0"
description = "Language-model-assisted BDI plan-library generation and evaluation pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dd>=0.6.0",
    "lark>=1.1.9",
    "openai>=2.6.0",
    "pyperplan>=2.1",
    "ltlf2dfa>=1.0.2",
]

[project.scripts]
llm-bdi-pipeline = "main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "compat*",
    "domain_model*",
    "evaluation*",
    "execution_logging*",
    "htn_evaluation*",
    "language_model*",
    "method_library*",
    "plan_library*",
    "planning*",
    "temporal_specification*",
    "utils*",
    "verification*",
]

[tool.setuptools.package-data]
"*" = ["*.hddl", "*.json", "*.asl", "*.mas2j", "*.properties", "*.jar"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-pptx>=1.0.2",
]
