[project]
name = "gp2pl"
version = "0.1.0"
description = "Certified compilation from generalized-planning evidence to BDI plan libraries"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dd>=0.6.0",
    "lark>=1.1.9",
    "ltlf2dfa>=1.0.2",
    "tarski>=0.8.2",
    "bitarray>=3.8.1",
    "natsort>=7.0.1",
    "clingo>=5.8.0",
]

[project.scripts]
gp2pl = "main:main"
llm-bdi-pipeline = "main:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "domain_level_planning*",
    "evaluation*",
    "plan_library*",
    "temporal_input*",
    "temporal_specification*",
    "utils*",
]

[tool.setuptools.package-data]
"*" = ["*.pddl", "*.json", "*.asl"]

[dependency-groups]
dev = [
    "matplotlib>=3.10,<4",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "python-pptx>=1.0.2",
    "ruff>=0.15.20",
]
